@@ -1,4 +1,16 @@
+2000-02-09  Philip Blundell  <pb@futuretv.com>
+
+        * config/arm/arm.c (legitimize_pic_address): Handle LABEL_REF
+        correctly.
+
+        * config/arm/arm.h (LEGITIMATE_CONSTANT_P): Allow anything when
+        generating PIC.
+        (LEGITIMATE_PIC_OPERAND): Disallow references to labels.
+
 2000-02-09  Nick Clifton  <nickc@cygnus.com>
+
+	* config/arm/arm.md (movsi): In PIC mode, make sure that a
+	constant source address is legitimate.
 
 	* config/arm/linux-elf.h (FUNCTION_PROFILER): Rename to
 	ARM_FUNCTION_PROFILER. 
